--- a/config/prometheus.yml
+++ b/config/prometheus.yml
@@ -10,4 +10,8 @@ scrape_configs:
 - job_name: app
   static_configs:
   - targets:
-    - localhost:3000    
+    - localhost:3001    
+- job_name: linux_so
+  static_configs:
+  - targets:
+    - localhost:9100    
